src/objects/RelatedAdditionalCaseFieldContract__c.object
<CustomObject>
    <description>SFDC1-156: This is a junction object between additional case fields and contract object.</description>
    <fields>
        <fullName>AdditionalCaseFields__c</fullName>
        <description>SFDC1-156: This field points to additional case fields in this junction object</description>
        <label>Additional Case Fields</label>
        <referenceTo>AdditionalCaseFields__c</referenceTo>
        <relationshipLabel>Related Additional Case Field Contracts</relationshipLabel>
        <relationshipName>RelatedAdditionalCaseFieldContracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-156: This field points to contract in this junction object</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Additional Case Field Contracts</relationshipLabel>
        <relationshipName>RelatedAdditionalCaseFieldContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDRelAddCaseContr__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>RAC{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID RelAddCaseContr</label>
        <type>AutoNumber</type>
    </fields>
    <label>Related Additional Case Field Contract</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Related Additional Case Field Contract N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Additional Case Field Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>